--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="{{ path('show_airports')}}">Show Airports</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ path('add_airport')}}">Add Airports</a>
+               {# <a class="nav-link" href="{{ path('add_airport')}}">Add Airports</a> #}
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
