Added Test Data and UI Elements

--- a/templates/airline/index.html.twig
+++ b/templates/airline/index.html.twig
@@ -8,7 +8,7 @@
 <table  id="airlines" class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
+      <th scope="col">Airline</th>
       <th scope="col">Country</th>  
       <th scope="col">AirPorts</th>   
       <th scope="col"></th>
