--- a/templates/airport/index.html.twig
+++ b/templates/airport/index.html.twig
@@ -8,7 +8,7 @@
 <table  id="airports" class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
+      <th scope="col">Airport</th>
       <th scope="col">Country</th>
       <th scope="col">Location</th>
       <th scope="col">Airlines</th>
@@ -18,10 +18,10 @@
   <tbody> 
 {% for airport in airports %}  
     <tr>
-      <td> {{ airport.name }}</td>
+      <td>{{ airport.name }}</td>
       <td>{{ airport.country }}</td>
       <td>{{ airport.location }}</td>
-      <td>{{ airport.airlines|split('') }}</td>
+      <td>{{ airport.airlines }}</td>
       <td>      
       	<a href="/airports/edit/{{airport.id}}" class="btn btn-dark">
       		Edit
